--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "contentlayer": "^0.3.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "framer-motion": "^10.12.2",
     "next": "13.3.0",
     "next-contentlayer": "^0.3.1",
     "postcss": "8.4.21",
