--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
     "framer-motion": "^10.12.2",
-    "next": "13.3.0",
+    "next": "^13.4.7",
     "next-contentlayer": "^0.3.1",
     "postcss": "8.4.21",
     "react": "18.2.0",
