--- a/package.json
+++ b/package.json
@@ -14,8 +14,8 @@
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
     "autoprefixer": "10.4.14",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.12.2",
     "next": "^14.0.4",
     "next-mdx-remote": "^4.4.1",
@@ -23,8 +23,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "sugar-high": "^0.5.6",
-    "tailwindcss": "3.3.1",
-    "typescript": "5.0.4"
+    "tailwindcss": "^3.3.5",
+    "typescript": "5.3.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.9",
