--- a/package.json
+++ b/package.json
@@ -27,12 +27,8 @@
     "typescript": "5.3.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9",
-    "prettier": "^2.8.7",
-    "prettier-plugin-tailwindcss": "^0.2.7",
-    "rehype-autolink-headings": "^6.1.1",
-    "rehype-pretty-code": "^0.9.4",
-    "rehype-slug": "^5.1.0",
-    "remark-gfm": "^3.0.1"
+    "@tailwindcss/typography": "^0.5.10",
+    "prettier": "^3.1.1",
+    "prettier-plugin-tailwindcss": "^0.5.11"
   }
 }
