--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.0",
+    "@mdx-js/react": "^3.1.0",
+    "@next/mdx": "^15.0.4",
     "@tailwindcss/container-queries": "^0.1.1",
+    "@types/mdx": "^2.0.13",
     "@types/node": "20.10.0",
     "@types/react": "18.2.38",
     "@types/react-dom": "18.2.17",
@@ -17,7 +21,7 @@
     "eslint": "^8.56.0",
     "eslint-config-next": "^14.0.4",
     "framer-motion": "^10.12.2",
-    "next": "^14.0.4",
+    "next": "^15.0.4",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.32",
     "react": "18.2.0",
