--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
     "next": "^15.0.4",
     "next-mdx-remote": "^4.4.1",
     "postcss": "^8.4.32",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "sugar-high": "^0.5.6",
     "tailwindcss": "^3.3.5",
     "typescript": "5.3.2"
