--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.4",
     "postcss": "^8",
+    "prettier": "^3.4.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "sugar-high": "^0.7.5",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
