--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@mdx-js/loader": "^3.1.0",
     "@mdx-js/react": "^3.1.0",
     "@next/mdx": "^15.0.4",
+    "@react-icons/all-files": "^4.1.0",
     "@types/mdx": "^2.0.13",
     "autoprefixer": "^10.4.20",
     "framer-motion": "^11.13.1",
     "next": "15.0.4",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@tailwindcss/container-queries": "^0.1.1",
